--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*Container*/
+
+
 .container {
 	width: 100%;
 	max-width: 1200px;
@@ -26,7 +28,9 @@ h1, h2, h3, h4, h5, h6 {
 /*intro*/
 
 .intro {
-	
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	width: 100%;
 	height: 100vh;
 
@@ -34,7 +38,48 @@ h1, h2, h3, h4, h5, h6 {
 	background-size: cover;
 }
 
+.intro__inner {
+	width: 100%;
+	max-width: 880px;
+	margin: 0 auto;
+
+	text-align: center;
+}
+
+.intro__title {
+	font-size: 150px;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-align: center;
+	line-height: 1;
+	color: #fff;
+}
+
+.intro__title:after {
+	content: "";
+	display: block;
+	width: 60px;
+	height: 3px;
+	margin: 60px auto;
+
+	background-color: #fff;
+
+}
+
+.intro__suptitle {
+    margin-bottom: 15px;
+
+	font-family: 'Kaushan Script', cursive;
+	font-size: 60px;
+	color: #fff;
+	text-align: center;
+}
+
+
+
 /*Header*/
+
+
 .header {
     /*width: 100px;*/
 
@@ -72,11 +117,78 @@ h1, h2, h3, h4, h5, h6 {
 	vertical-align: top;
 	margin: 0 10px;
 	color: #fff;
+	position: relative;
+
 	text-decoration: none; 
 
-	transition: color 0.2s linear; 
+	transition: color .1s linear; 
+}
+
+.nav__link:after{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 3px;
+	
+	background-color: #fff;
+	opacity: 0;
+
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 1;
+
+	transition: opacity .1s linear
 }
 
 .nav__link:hover{
 	color: #fce382;
+}
+
+.nav__link:hover:after{
+	opacity: 1;
+}
+
+/* Button */
+
+.btn {
+	display: inline-block;
+	vertical-align: top;
+	padding: 10px 15px;
+
+	border: 3px solid #fff;
+
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	text-decoration: none;
+
+	transition: background .1s linear, color .1s linear; /* задает плавности кнопке */
+
+}
+
+.btn:hover {
+	background: #fff;
+	color: #000;
+}
+
+/* Slider */
+
+.slider {
+	display: flex;
+	justify-content: space-between;
+}
+
+.slider__item {
+	width: 24%;
+
+	font-size: 18px;
+	color: #fff;
+	text-transform: uppercase;
+
+}
+
+.slider__number {
+	font-size: 2px;
+	font-weight: 700; 
 }
