--- a/css/style.css
+++ b/css/style.css
@@ -177,18 +177,42 @@ h1, h2, h3, h4, h5, h6 {
 .slider {
 	display: flex;
 	justify-content: space-between;
+	margin-top: 30px;
 }
 
 .slider__item {
-	width: 24%;
+	width: 20%;
+	padding: 20px 0;
+	position: relative;
 
-	font-size: 18px;
+
+	border-top: 3px solid #fff;
+	opacity: .7
+
+	font-size: 30px;
 	color: #fff;
 	text-transform: uppercase;
 
 }
 
-.slider__number {
-	font-size: 2px;
-	font-weight: 700; 
+.slider__item.active {
+	opacity: 1;
+}
+
+.slider__item.active:before {
+	content: "";
+	display: block;
+	width: 70px;
+	height: 3px;
+
+	background-color: #f38181;
+
+	position: absolute;
+	top: -3px;
+	left: 0;
+	z-index: 1;
+}
+
+.slider__num {
+	font-weight: 900; 
 }
