--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,12 @@ h1, h2, h3, h4, h5, h6 {
 	color: #fce382;
 }
 
-.nav__link:hover:after{
+.nav__link:hover:after,
+.nav__link.active:after{
 	opacity: 1;
+}
+.nav__link.active {
+	color: #fce382;
 }
 
 /* Button */
